feat: reply in quote, add member to work type and show personal chat with all members in department
